--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "ethr-did-resolver": "^2.2.0",
     "express": "^4.16.4",
     "nodemon": "^2.0.4",
-    "web3": "^1.2.9",
+    "web3": "^2.0.0-alpha.1",
     "winston": "^3.2.1"
   }
 }
