--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon --exec babel-node index.js"
   },
   "keywords": [
     "did"
@@ -22,9 +22,17 @@
     "ethr-did": "^1.1.0",
     "ethr-did-resolver": "^2.2.0",
     "express": "^4.16.4",
-    "nodemon": "^2.0.4",
     "truffle-hdwallet-provider": "^1.0.17",
+    "uport-credentials": "^1.3.3",
     "web3": "^2.0.0-alpha.1",
     "winston": "^3.2.1"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.10.3",
+    "@babel/core": "^7.10.3",
+    "@babel/node": "^7.10.3",
+    "@babel/preset-env": "^7.10.3",
+    "babel-cli": "^7.0.0-beta.3",
+    "nodemon": "^2.0.4"
   }
 }
